# perceptron

./: .clang-format  README.md  meson.build
src/: dataset.hpp  main.cpp  make_sample.cpp  mlp.hpp  perceptron.hpp  test.hpp  train.cpp
